--- a/mobile/src/main/res/layout/activity_edit_record.xml
+++ b/mobile/src/main/res/layout/activity_edit_record.xml
@@ -2,15 +2,62 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="recorder.android.huangsz.com.recorder.EditRecordActivity">
+                tools:context=".EditRecordActivity">
 
-  <TextView
-    android:text="@string/hello_world"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
+    android:background="#999999"
+    android:orientation="vertical">
+
+    <EditText
+      android:id="@+id/record_name_text"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="10dp"
+      android:hint="Name"/>
+
+    <EditText
+      android:id="@+id/record_desc_text"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="10dp"
+      android:ems="10"
+      android:hint="Description"
+      android:inputType="textMultiLine"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:gravity="center"
+    android:orientation="horizontal">
+
+    <Button
+      android:id="@+id/save_record_change_btn"
+      style="?android:attr/borderlessButtonStyle"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="10dp"
+      android:layout_weight="1"
+      android:text="@string/save"/>
+
+    <Button
+      android:id="@+id/cancel_record_change_btn"
+      style="?android:attr/borderlessButtonStyle"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="10dp"
+      android:layout_weight="1"
+      android:text="@string/cancel"/>
+  </LinearLayout>
 
 </RelativeLayout>
