--- a/mobile/src/main/res/layout/listitem_record.xml
+++ b/mobile/src/main/res/layout/listitem_record.xml
@@ -1,19 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="10dp"
-              android:orientation="vertical">
-  <TextView
-    android:id="@+id/record_name"
-    android:text="Name"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
+  android:layout_height="wrap_content"
+  android:padding="10dp">
 
-  <TextView
-    android:id="@+id/record_desc"
-    android:text="Description"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+    android:layout_alignParentLeft="true"
+    android:clickable="false"
+    android:focusable="false"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <TextView
+      android:id="@+id/record_name"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="Name"/>
+
+    <TextView
+      android:id="@+id/record_desc"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="Description"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="fill_parent"
+    android:layout_alignParentRight="true"
+    android:focusable="false"
+    android:orientation="horizontal">
+
+    <ImageButton
+      android:id="@+id/record_track_btn"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_weight="1"
+      android:adjustViewBounds="true"
+      android:background="@drawable/record_track"
+      android:scaleType="fitCenter"/>
+
+    <ImageButton
+      android:id="@+id/record_setting_btn"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_weight="1"
+      android:adjustViewBounds="true"
+      android:background="@drawable/record_settings"
+      android:scaleType="fitCenter"/>
+
+  </LinearLayout>
+
+</RelativeLayout>
