--- a/mobile/src/main/res/layout/fragment_record_chart.xml
+++ b/mobile/src/main/res/layout/fragment_record_chart.xml
@@ -13,6 +13,7 @@
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:id="@+id/chart_holder">
 
   </LinearLayout>
